fix: chunk-safe REPL output tracking and EDT-safe console launch